added changes and fixed bugs

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
     <p>If you’d like to connect about a project, collaboration, research opportunity, or just want to say hello, feel free to reach out using any of the methods below.</p>
 
     <ul>
-      <li><strong>Email:</strong> <a href="mailto:your.izabayoclaudel@example.com">your.email@example.com</a></li>
+      <li><strong>Email:</strong> <a href="mailto:your.izabayoclaudel@example.com">izabayoclaudel@gmail.com</a></li>
       <li><strong>GitHub:</strong> <a href="https://github.com/Izadel257" target="_blank">github.com/Izadel257</a></li>
-      <li><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/paul-claudel-izabayo-056702242" target="_blank">linkedin.com/in/YOUR-LINKEDIN</a></li>
+      <li><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/paul-claudel-izabayo-056702242" target="_blank">Linkedin.com/in/paul-claudel-izabayo-056702242</a></li>
     </ul>
 
     <p>You can also check out my resume or reach out directly to discuss any of the work featured on this site.</p>
