Updated my About

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <h1>Hi, I'm Paul Claudel Izabayo</h1>
 
     <p>
-      I’m a data-driven developer and researcher with a passion for building technologies that are not only functional, but meaningful. I was born and raised in rural Burundi, where access to digital tools was limited — I didn't use a computer until I graduated high school. That experience shaped how I think about equity in tech and continues to guide the projects I work on.
+      I’m a data-driven developer with a passion for building technologies that are not only functional, but meaningful. I was born and raised in rural Burundi, where access to digital tools was limited — I didn't use a computer until I graduated high school. That experience shaped how I think about equity in tech and continues to guide the projects I work on.
     </p>
 
     <p>
-      Today, I work at the intersection of data science, community empowerment, and ethical innovation. From analyzing media framing as a Lead Data Scientist at Carleton College’s DataSquad, to co-founding <a href="https://www.spaceedafrica.org/spaceed/africa/team" target="_blank">Space-Ed Africa</a> to expand access to tech education in underserved areas, my work is about leveraging technology to build opportunity.
+      Today, I work at the intersection of data science, community empowerment, and ethical innovation. From fetching, organizing and storing media framing as a Data Scientist at Carleton College’s DataSquad, to co-founding <a href="https://www.spaceedafrica.org/spaceed/africa/team" target="_blank">Space-Ed Africa</a> to expand access to tech education in underserved areas, my work is about leveraging technology to build opportunity.
     </p>
 
     <p>
