--- a/projects.html
+++ b/projects.html
@@ -26,20 +26,33 @@
             <h2>🔓 Public Projects</h2>
             <ul>
                 <li>
+                    <strong> <a href = ""></a></strong>
+                </li>
+                <li>
+                    <strong><a href = "https://github.com/Izadel257/git-conflict-daemon" target="_blank">Git Conflict
+                            Daemon</a></strong><br />
+                            This is a lightweight, real-time Git conflict detector that runs quietly in the background 
+                            and gently lets you know before you make changes to files that would result in merge conflicts.        
+                </li>
+
+                <li>
                     <strong><a href="https://github.com/Izadel257/job_tracker" target="_blank">Job
                             Tracker</a></strong><br />
+                    <p>
                     A Chrome extension that logs job applications to a connected Google Sheet. Built with JavaScript,
                     React, and Google Apps Script.
+                    </p>
                 </li>
+
                 <li>
-                    <strong><a href="https://github.com/Izadel257/CarlParty"
-                            target="_blank">CarlParty</a></strong><br />
-                    A social app prototype focused on event planning and attendance, built with Node.js and MongoDB.
-                </li>
-                <li>
-                    <strong><a href="https://github.com/Izadel257/SchillersApp"
-                            target="_blank">SchillersApp</a></strong><br />
-                    A mobile payment and transaction system developed using React Native, Flask, and SQLAlchemy.
+                    <strong> <a href = "https://www.cs.carleton.edu/cs_comps/2425/dmusicant/aiMonopoly/" target="_blank">Capstone Project: Reinforcement learning in Monopoly</a></strong><br />
+                    <p>
+                        I worked with a group of 3 other Carleton Students to explore how reinforcement learning can be applied to the game of Monopoly by designing and comparing three Q-learning agents: a basic Q-table agent, 
+                        an approximate Q-learning agent using feature-based generalization, and a deep Q-lambda agent powered by neural networks and eligibility traces. 
+                        Each agent was trained to make strategic decisions—like buying, selling, and holding properties—in complex, multi-player environments. 
+                        Our goal was to balance learning efficiency, representational complexity, and long-term planning in a game with a rich and dynamic decision space.
+                        Check out our work on github: <a href = "https://github.com/Comps-Monopoly-CarletonCSF24/MonopolyRL" target="_blank">MonoplyRL</a>.
+                    </p>
                 </li>
             </ul>
         </section>
@@ -48,15 +61,19 @@
             <h2>🔒 Confidential Work</h2>
             <ul>
                 <li>
-                    <strong>Political Media Analysis (Carleton DataSquad)</strong><br />
-                    Analyzed two decades of news transcripts to study media framing of wedge issues from 2000–2024.
-                    Built automated R pipelines using <code>dplyr</code>, <code>tidyverse</code>, and
-                    <code>ggplot2</code>. <em>Code unavailable due to data sensitivity.</em>
+                    <strong>Election News Data Analysis Project (Data Scientist, Carleton College)</strong><br />
+                    I developed end-to-end data pipelines using Python, R, and SQL to extract, transform, and load over two years of news transcripts from NDS databases.
+                     I applied advanced data manipulation techniques with Pandas and NumPy to ensure the analysis aligned with project goals, ultimately supporting the 
+                     processing of more than 60,000 transcripts. I also managed communications between Carleton faculty and NDS tech support, facilitating seamless collaboration across technical and academic teams.
+                      In addition, I authored technical documentation in line with FAIR data principles and contributed to project blogs. My role included leading data cleaning and transformation efforts, optimizing datasets for efficient and accessible use by end-users.
                 </li>
                 <li>
                     <strong>Toronto Metropolitan University Research</strong><br />
-                    Worked on winter salinization impacts on aquatic ecosystems using GIS data in R. Created spatial
-                    visualizations and cleaned field datasets for analysis. <em>Project is internal.</em>
+                    I conducted GIS data visualization using R to create interactive, map-based representations that supported environmental research insights. 
+                    Working closely with environmental science researchers, I translated their needs into secure and compliant data workflows. 
+                    I executed climate data preprocessing tasks using both Python and R, employing techniques such as merging, deduplication, and validation to ensure data accuracy and integrity. 
+                    Using Pandas and NumPy, I performed data aggregation, handled missing values, and optimized datasets for analysis. 
+                    To ensure transparency and reproducibility, I also developed clear documentation for both the data and code, enabling researchers to easily interpret and build upon the work. <em>Project is internal.</em>
                 </li>
             </ul>
         </section>
@@ -65,13 +82,18 @@
             <h2>🚧 In Progress</h2>
             <ul>
                 <li>
-                    <strong>SchillersApp v2</strong><br />
-                    Refining account security, transaction history features, and UI improvements.
+                    <strong><a href="https://github.com/Izadel257/SchillersApp"
+                            target="_blank">SchillersApp (Xchange)</a></strong><br />
+                    A mobile payment and transaction system developed using React Native, Flask, and SQLAlchemy.
+                    Currently waiting to get access to the API for the payment system. We are in touch with the school 
+                    technology team to get the API access.
                 </li>
+
                 <li>
-                    <strong>Samandari Platform Updates (Space-Ed Africa)</strong><br />
+                    <strong><a href="http://samandari.spaceedafrica.org"
+                        target="_blank">Samandari</a></strong><br />
                     Designing and testing new mobile-first coding challenges to improve accessibility for users with low
-                    bandwidth and limited devices.
+                    bandwidth and limited devices. Also still working on some of the functionalities of the platform.
                 </li>
             </ul>
         </section>
