added improvements to the projects

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <li><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/paul-claudel-izabayo-056702242" target="_blank">Linkedin.com/in/paul-claudel-izabayo-056702242</a></li>
     </ul>
 
-    <p>You can also check out my resume or reach out directly to discuss any of the work featured on this site.</p>
+    <p> reach out directly to discuss any of the work featured on this site.</p>
   </main>
 
   <footer>
