--- a/projects.html
+++ b/projects.html
@@ -26,13 +26,16 @@
             <h2>🔓 Public Projects</h2>
             <ul>
                 <li>
-                    <strong> <a href = ""></a></strong>
-                </li>
-                <li>
                     <strong><a href = "https://github.com/Izadel257/git-conflict-daemon" target="_blank">Git Conflict
                             Daemon</a></strong><br />
+                            <p>
                             This is a lightweight, real-time Git conflict detector that runs quietly in the background 
-                            and gently lets you know before you make changes to files that would result in merge conflicts.        
+                            and gently lets you know before you make changes to files that would result in merge conflicts.
+                            </p>
+                            <p>
+                            It is built with Python and uses the GitPython library to monitor changes in your Git repository.
+                            It offers the user the option to ignore the alert and continue working, or pull the latest changes from the remote repository.
+                            </p>
                 </li>
 
                 <li>
@@ -40,7 +43,7 @@
                             Tracker</a></strong><br />
                     <p>
                     A Chrome extension that logs job applications to a connected Google Sheet. Built with JavaScript,
-                    React, and Google Apps Script.
+                    React, and Google Apps Script. It makes easy for one to go back and check the jobs they have applied to, update the statusof the application depending on the response from the company, and also add notes to the application.
                     </p>
                 </li>
 
@@ -66,6 +69,7 @@
                      I applied advanced data manipulation techniques with Pandas and NumPy to ensure the analysis aligned with project goals, ultimately supporting the 
                      processing of more than 60,000 transcripts. I also managed communications between Carleton faculty and NDS tech support, facilitating seamless collaboration across technical and academic teams.
                       In addition, I authored technical documentation in line with FAIR data principles and contributed to project blogs. My role included leading data cleaning and transformation efforts, optimizing datasets for efficient and accessible use by end-users.
+                      Check out a blog about the project (not the most update but should give you an idea of what the project is): <a href="https://www.carleton.edu/its/blog/election-news-analysis-project/" target="_blank">Election News Data Analysis</a>.
                 </li>
                 <li>
                     <strong>Toronto Metropolitan University Research</strong><br />
@@ -73,7 +77,7 @@
                     Working closely with environmental science researchers, I translated their needs into secure and compliant data workflows. 
                     I executed climate data preprocessing tasks using both Python and R, employing techniques such as merging, deduplication, and validation to ensure data accuracy and integrity. 
                     Using Pandas and NumPy, I performed data aggregation, handled missing values, and optimized datasets for analysis. 
-                    To ensure transparency and reproducibility, I also developed clear documentation for both the data and code, enabling researchers to easily interpret and build upon the work. <em>Project is internal.</em>
+                    To ensure transparency and reproducibility, I also developed clear documentation for both the data and code, enabling researchers to easily interpret and build upon the work. My contribution to the project earned me co-authorship to the research.<em>Project is internal.</em>
                 </li>
             </ul>
         </section>
