added changes to refect space-ed africa

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,12 @@
             <h2>🔓 Public Projects</h2>
             <ul>
                 <li>
+                    <strong> <a href = "https://www.spaceedafrica.org" target = "_blank">Space-Ed Africa (President)</a></strong>
+                    I a co-founded Space-Ed Africa, a community-driven initiative in Burundi focused on empowering youth through skills training, entrepreneurship, and technology.
+                     Through programs like our Summer Empowerment Boot Camp, online learning app, mentorship initiatives, and AI-powered projects, we aim to inspire purpose, promote innovation, and support young people—especially women—in redefining their future as job creators and leaders in tech.
+                     We are still in our early stages, but we believe a lot in the potential of the project and we are working hard to make it a success. With just one bootcamp, we are already seeing some of our cohort members start their own projects and have impacts in the community.
+                </li>
+                <li>
                     <strong><a href = "https://github.com/Izadel257/git-conflict-daemon" target="_blank">Git Conflict
                             Daemon</a></strong><br />
                             <p>
