--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                             Tracker</a></strong><br />
                     <p>
                     A Chrome extension that logs job applications to a connected Google Sheet. Built with JavaScript,
-                    React, and Google Apps Script. It makes easy for one to go back and check the jobs they have applied to, update the statusof the application depending on the response from the company, and also add notes to the application.
+                    React, and Google Apps Script. It makes it easy for one to go back and check the jobs they have applied to, update the application status and add notes to the application.
                     </p>
                 </li>
 
@@ -71,11 +71,12 @@
             <ul>
                 <li>
                     <strong>Election News Data Analysis Project (Data Scientist, Carleton College)</strong><br />
-                    I developed end-to-end data pipelines using Python, R, and SQL to extract, transform, and load over two years of news transcripts from NDS databases.
+                    The Election News Analysis project has been angoing for more than 3 years and I was lucky to be one of the people that contributed to it. The project aims to collect transcripts from a range of news sources and analyze the trends and patterns in topics discussed during presidential election periods, as well as during major events that influenced those elections (e.g., the murder of George Floyd, the January 6th Capitol attack).
+                    So far, my contribution has been developing end-to-end data pipelines using Python, R, and SQL to extract, transform, and load over two years of news transcripts from NDS databases.
                      I applied advanced data manipulation techniques with Pandas and NumPy to ensure the analysis aligned with project goals, ultimately supporting the 
                      processing of more than 60,000 transcripts. I also managed communications between Carleton faculty and NDS tech support, facilitating seamless collaboration across technical and academic teams.
-                      In addition, I authored technical documentation in line with FAIR data principles and contributed to project blogs. My role included leading data cleaning and transformation efforts, optimizing datasets for efficient and accessible use by end-users.
-                      Check out a blog about the project (not the most update but should give you an idea of what the project is): <a href="https://www.carleton.edu/its/blog/election-news-analysis-project/" target="_blank">Election News Data Analysis</a>.
+                      My role included leading data cleaning and transformation efforts, optimizing datasets for efficient and accessible use by end-users.
+                      Check out a blog about the project (not the most update but it should give you an idea of what the project is): <a href="https://www.carleton.edu/its/blog/election-news-analysis-project/" target="_blank">Election News Data Analysis</a>.
                 </li>
                 <li>
                     <strong>Toronto Metropolitan University Research</strong><br />
@@ -94,16 +95,16 @@
                 <li>
                     <strong><a href="https://github.com/Izadel257/SchillersApp"
                             target="_blank">SchillersApp (Xchange)</a></strong><br />
-                    A mobile payment and transaction system developed using React Native, Flask, and SQLAlchemy.
-                    Currently waiting to get access to the API for the payment system. We are in touch with the school 
-                    technology team to get the API access.
+                    A mobile payment and transaction system of Schillers (a currency that works at Carleton college and other associated service providers) developed using React Native, Flask, and SQLAlchemy.
+                    I completed the development of the application and I am currently waiting to get access to the APIs for the payment system and the school authentication system. 
+                    I am in touch with the school technology team requesting the API access, and explaining how the  possibility of the application increasing the use of Schillers and the benefits that would come with it.
                 </li>
 
                 <li>
                     <strong><a href="http://samandari.spaceedafrica.org"
                         target="_blank">Samandari</a></strong><br />
                     Designing and testing new mobile-first coding challenges to improve accessibility for users with low
-                    bandwidth and limited devices. Also still working on some of the functionalities of the platform.
+                    bandwidth and limited devices. Also still working on some of the functionalities of the platform (mainly searching and video/audio call/meet features).
                 </li>
             </ul>
         </section>
